k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
      - name: client
        image: jaimetuyuc7/client
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi" # Minimum memory required
            cpu: "250m" # Minimum CPU required
          limits:
            memory: "256Mi" # Maximum memory allowed
            cpu: "500m" # Maximum CPU allowed
