k8s/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
      - name: worker
        image: jaimetuyuc7/worker
        resources:
          requests:
            memory: "128Mi" # Minimum memory required
            cpu: "250m" # Minimum CPU required
          limits:
            memory: "256Mi" # Maximum memory allowed
            cpu: "500m" # Maximum CPU allowed
